@@ -1,2 +1,2 @@
-GAME_EXECUTABLE &
+##GAME_EXECUTABLE &
 exec fluxbox
