@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.112 2004/11/18 01:54:45 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.113 2004/11/19 18:19:23 wolf31o2 Exp $
+
+  19 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/files/gamecd-xinitrc, livecd/runscript-support/gamecdfs-update.sh,
+  livecd/runscript-support/livecdfs-update.sh:
+  Fixing up some GameCD stuff and also fixing a problem with the ls and grep
+  aliases having --color rather than --color=auto.
 
   17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/files/livecd-local.start:
